[gd_scene load_steps=8 format=2]

[ext_resource path="res://FiraCode-Retina.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GuessTheNumber.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventAction" id=2]
action = "ui_select"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="GuessTheNumber" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 600.0
color = Color( 0.156863, 0.164706, 0.211765, 1 )

[node name="Control" type="Control" parent="."]
margin_right = 800.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 800.0
margin_bottom = 600.0
alignment = 1

[node name="Message" type="Label" parent="Control/VBoxContainer"]
margin_top = 255.0
margin_right = 800.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 1 )
text = "Guess The Number!"
align = 1
valign = 1
autowrap = true

[node name="Button" type="Button" parent="Control/VBoxContainer"]
margin_top = 299.0
margin_right = 800.0
margin_bottom = 345.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 5 )
text = "Start!"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
visible = false
margin_top = 305.0
margin_right = 800.0
margin_bottom = 388.0

[node name="yourguess" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
custom_fonts/font = SubResource( 1 )
text = "Your Guess:"

[node name="guess" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
custom_fonts/font = SubResource( 1 )
text = "
"

[node name="Check" type="Button" parent="Control/VBoxContainer"]
visible = false
margin_top = 324.0
margin_right = 800.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "Check!"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="Control/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Check" to="." method="_on_Check_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
